# MIND_recommendation

./: .gitignore  README.md  hello.py  pyproject.toml
notebook/: eda.py  opensearch_connect.py  recommend_evaluation.py
src/: base_recommender.py  lda_content_recommender.py  random_recommender.py  word2vec_content_recommender.py
streamlit_app/: __init__.py  app.py
util/: data_loader.py  metric_calculator.py  models.py
