[project]
name = "20250202-microsoft-news-recommendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "gensim>=4.3.3",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "nltk>=3.9.1",
    "opensearch-py>=2.8.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.1",
    "uvicorn>=0.34.2",
]
